<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/wish_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/update_version"
        android:textColor="#FE756D"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:textColor="#666666"
        android:textSize="14dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="-36px"
        android:layout_marginRight="-36px"
        android:layout_marginTop="29dp"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#ddd" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#fe756d"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>