<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_bg"
              android:orientation="vertical">

    <include layout="@layout/toolbar_setting"/>

    <LinearLayout
        android:id="@+id/ll_viewSetting_myAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_viewSetting_myAddress"
            android:textColor="@color/commonFontColor_black"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right_gray"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/ll_viewSetting_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_viewSetting_password"
            android:textColor="@color/commonFontColor_black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_viewSetting_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="未设置"
            android:textColor="@color/commonFontColor_gray"
            android:textSize="13sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right_gray"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/ll_viewSetting_push"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_viewSetting_push"
            android:textColor="@color/commonFontColor_black"
            android:textSize="15sp"/>

        <Switch
            android:id="@+id/switch_viewSetting_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="30dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/ll_viewSetting_clearCache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_viewSetting_clearCache"
            android:textColor="@color/commonFontColor_black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0M"
            android:textColor="@color/commonFontColor_gray"
            android:textSize="13sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_viewSetting_quitLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/btn_quit_login"
        android:text="@string/tv_viewSetting_quitLogin"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>
</LinearLayout>