<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="315dp"
    android:layout_height="match_parent"
    android:background="@color/viewUserInfo_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_viewUserInfo_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:src="@drawable/icon_head" />

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_viewUserInfo_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="未登录"
        android:textColor="@color/commonFontColor_black"
        android:textSize="17sp">

        <TextView
            android:id="@+id/tv_viewUserInfo_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/commonFontColor_black"
            android:textSize="18sp" />

        <!--<TextView-->
        <!--android:id="@+id/tv_viewUserInfo_editUser"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/tv_viewUserInfo_userName"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:text="@string/tv_viewUserInfo_editUser"-->
        <!--android:textColor="@color/commonFontColor_gray"-->
        <!--android:textSize="11sp"/>-->

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="7dp"-->
            <!--android:src="@drawable/icon_compile" />-->
    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/tv_viewUserInfo_editUser"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/tv_viewUserInfo_userName"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="5dp"-->
    <!--android:text="@string/tv_viewUserInfo_editUser"-->
    <!--android:textColor="@color/commonFontColor_gray"-->
    <!--android:textSize="11sp"/>-->

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_viewUserInfo_userName"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_viewUserInfo_home"
            android:textColor="@color/commonFontColor_black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_viewUserInfo_home"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_viewUserInfo_setting"
            android:textColor="@color/commonFontColor_black"
            android:textSize="17sp" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:id="@+id/ll_viewUserInfo_bonusScene"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/ll_viewUserInfo_setting"-->
    <!--android:layout_marginStart="30dp"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:gravity="center_vertical">-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="12dp"-->
    <!--android:src="@drawable/icon_egg" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/tv_viewUserInfo_bonusScene"-->
    <!--android:textColor="@color/commonFontColor_black"-->
    <!--android:textSize="17sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_viewUserInfo_setting"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_faceback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_viewUserInfo_feedback"
            android:textColor="@color/commonFontColor_black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_viewUserInfo_feedback"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_viewUserInfo_about"
            android:textColor="@color/commonFontColor_black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_viewUserInfo_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_viewUserInfo_about"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_recommend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_viewUserInfo_share"
            android:textColor="@color/commonFontColor_black"
            android:textSize="17sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/micro_shop"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/micro_shop" />
</RelativeLayout>