<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="360dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/wish_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/wish_congratulations"
            android:textColor="#FE756D"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:layout_marginTop="22dp"
            android:text="已免费为您寄出心愿单中的一件商品，分享给好友一起实现更多x心愿！"
            android:textColor="#666666"
            android:textSize="14dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="29dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="#f0f0f0"
            android:padding="6dp">

            <ImageView
                android:id="@+id/wish_icon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/wish_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_toRightOf="@id/wish_icon"
                android:maxLines="2"
                android:textColor="#333333"
                android:textSize="12sp"
                tools:text="猫王（MAO KING）小王子OTR便携蓝牙音箱 嬉皮红" />

            <TextView
                android:id="@+id/wish_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wish_icon"
                android:layout_marginLeft="9dp"
                android:layout_toRightOf="@id/wish_icon"
                android:gravity="bottom"
                android:textColor="#FE756D"
                android:textSize="14sp"
                tools:text="￥398.00" />

            <TextView
                android:id="@+id/wish_price_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wish_icon"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/wish_price"
                android:textColor="#999999"
                android:textSize="10sp"
                tools:text="￥468" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="-36px"
            android:layout_marginRight="-36px"
            android:layout_marginTop="29dp"
            android:background="#dddddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wish_btn_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wish_btn_detail"
                android:textColor="#666666"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#ddd" />

            <TextView
                android:id="@+id/wish_btn_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wish_btn_share"
                android:textColor="#fe756d"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/wish_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:src="@drawable/close_hint" />
</LinearLayout>